--- a/LimeTxCw/LimeTxCw.vcxproj
+++ b/LimeTxCw/LimeTxCw.vcxproj
@@ -151,6 +151,9 @@
   <ItemGroup>
     <ClCompile Include="LimeTxCw.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="testcases.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
