--- a/LimeTxCw/LimeTxCw.vcxproj.filters
+++ b/LimeTxCw/LimeTxCw.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="testcases.h">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
