--- a/LimeTxCw/LimeTxCw.vcxproj.filters
+++ b/LimeTxCw/LimeTxCw.vcxproj.filters
@@ -18,10 +18,16 @@
     <ClCompile Include="LimeTxCw.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ControlFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="testcases.h">
+    <ClInclude Include="ControlFunctions.h">
       <Filter>Header Files</Filter>
-    </None>
+    </ClInclude>
+    <ClInclude Include="LimeTxCw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
