interface change: always enter command paras in brackets class CCmdParameter

--- a/LimeTxCw/LimeTxCw.vcxproj
+++ b/LimeTxCw/LimeTxCw.vcxproj
@@ -149,10 +149,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CmdParameter.cpp" />
     <ClCompile Include="ControlFunctions.cpp" />
     <ClCompile Include="LimeTxCw.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CmdParameter.h" />
     <ClInclude Include="ControlFunctions.h" />
     <ClInclude Include="LimeTxCw.h" />
   </ItemGroup>
